<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_section.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue_main">

        <TextView
            android:id="@+id/Authentif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/authentif"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/mdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="321dp"
        android:text="@string/motdepasse"
        android:textColor="@color/text_blue"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/motdepasse"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="355dp"
        android:background="@drawable/border">

    </EditText>

    <EditText
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="246dp"
        android:accessibilityLiveRegion="assertive"
        android:background="@drawable/border"
        android:visibility="visible">

    </EditText>

    <TextView
        android:id="@+id/Courriel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="213dp"
        android:text="@string/courriel"
        android:textColor="@color/text_blue"
        android:textSize="18sp" />

    <Button
        android:id="@+id/inscrire"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="143dp"
        android:background="@color/blue_main"
        android:text="@string/connecter"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/mdp_oublier"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="32dp"
        android:text="@string/mdp_oublier"
        android:textColor="@color/text_blue" />

    <Button
        android:id="@+id/retour"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="264dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="34dp"
        android:text="@string/enregistrer"
        android:textColor="@color/text_blue" />

</RelativeLayout>