<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_section.MotPasseOublier">

    <TextView
        android:id="@+id/mdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="329dp"
        android:lineSpacingExtra="18sp"
        android:text="@string/mdp_temporaire"
        android:textColor="@color/text_blue"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="361dp"
        android:background="@drawable/border">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="254dp"
        android:accessibilityLiveRegion="assertive"
        android:background="@drawable/border"
        android:visibility="visible">

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Courriel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="217dp"
        android:text="@string/entrer_adresse"
        android:textColor="@color/text_blue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/Authentif"
        android:layout_width="337dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="69dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/mdp_oublier"
        android:textColor="@color/text_blue"
        android:textSize="30sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/inscrire"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="143dp"
        android:background="@color/blue_main"
        android:text="@string/connecter"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/retour"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="264dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="34dp"
        android:text="@string/retour"
        android:textColor="@color/black" />

</RelativeLayout>