<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="569dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="1dp">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="282dp"
            android:layout_height="274dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_prof_name" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="49dp"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_favorite_24"
            android:tint="@color/design_default_color_error"
            app:layout_constraintEnd_toStartOf="@+id/partager"
            app:layout_constraintHorizontal_bias="0.299"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_picture" />

        <TextView
            android:id="@+id/view_prof_name"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/etudiant1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/purple_700"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/envoyer_message"
            android:layout_width="184dp"
            android:layout_height="29dp"
            android:background="@color/cardview_shadow_end_color"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_baseline_message_24"
            android:text="@string/send_message"
            android:textAlignment="textEnd"
            android:textColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/demande_ami"
            android:layout_width="146dp"
            android:layout_height="29dp"
            android:background="@color/cardview_shadow_end_color"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_baseline_person_add_24"
            android:text="@string/add_friend"
            android:textAlignment="textEnd"
            android:textColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/club_participe"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/cours_pris"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/apropos"
            android:textColor="@color/text_blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <Button
            android:id="@+id/partager"
            android:layout_width="84dp"
            android:layout_height="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="64dp"
            android:background="@color/cardview_shadow_end_color"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_baseline_share_24"
            android:text="@string/partage"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>